[package]
name = "feature-test"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printer = { path = "./printer" }

[dev-dependencies]
printer = { path = "./printer", features = ["print"] }
